Last adjustments
1. Added sort function in main menu
2. Added sort methods in CatalogService
3. Added conformations when adding or removing items and just one item fits the search.
4. Some small tweaks.